Removed isBlank.