@@ -97,7 +97,7 @@ public class FaceGroupServiceImpl implements FaceGroupService{
 	public List<FaceGroupSearchDTO> searchGroups(SearchDTO searchDTO, Long faceUserId) {
 		String[] caseAll = { "FG.NAME", "(FU.NAME || ' ' || FU.SURNAME)" };
 		String placeholder = "";
-		if (!searchDTO.getSearchWords().get(0).isBlank()) {
+		if (!searchDTO.getSearchWords().get(0).trim().isEmpty()) {
 			placeholder = ConcatSQLSearch.createSQLQueryAddition("and", searchDTO, caseAll);
 		}
 		String id = Long.toString(faceUserId);
